--- a/config.example.json
+++ b/config.example.json
@@ -16,5 +16,6 @@
     "builddumping": {
         "fnlogs": "<DISK>:\\Users\\<USER>\\AppData\\Local\\FortniteGame\\Saved\\Logs\\FortniteGame.log",
         "launcherlogs" : "<DISK>:\\Users\\<USER>\\AppData\\Local\\EpicGamesLauncher\\Saved\\Logs\\EpicGamesLauncher.log"
-    }
+    },
+    "warning_interval" : 60000
 }
