--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "node-wick": "^2.2.0"
+    "node-wick": "^2.2.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js",
+    "skipdump": "node index.js -sd"
   },
   "repository": {
     "type": "git",
