--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cosmetic server, used with fnbot-client.",
   "main": "index.js",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "node-wick": "^2.2.0",
@@ -12,10 +13,18 @@
   "engines": {
     "node": "12.11.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  },
   "scripts": {
     "start": "node index.js",
-    "skipdump": "node index.js -sd"
+    "skipdump": "node index.js -skipdump",
+    "forcedump": "node index.js -forcedump"
   },
   "repository": {
     "type": "git",
