--- a/config.example.json
+++ b/config.example.json
@@ -11,12 +11,11 @@
     "assetdumping": {
         "pakpath": "<DISK>:\\Program Files\\Epic Games\\Fortnite\\FortniteGame\\Content\\Paks",
         "locales" : ["de","en","fr","ru","es","pt-BR","tr","it"],
-        "deleteFilesAfterDump" : true,
         "dumpIcons" : false
     },
     "builddumping": {
         "fnlogs": "<DISK>:\\Users\\<USER>\\AppData\\Local\\FortniteGame\\Saved\\Logs\\FortniteGame.log",
         "launcherlogs" : "<DISK>:\\Users\\<USER>\\AppData\\Local\\EpicGamesLauncher\\Saved\\Logs\\EpicGamesLauncher.log"
     },
-    "warning_interval" : 60000
+    "update_interval" : 300000
 }
