--- a/config.example.json
+++ b/config.example.json
@@ -3,15 +3,11 @@
         "port": 8080,
         "title": "fnbot-server"
     },
-    "routeinit": {
-        "defaultVersion": "v1.1",
-        "routeLocation": "./routes/",
-        "baseUrl": "/api/"
-    },
     "assetdumping": {
         "pakpath": "<DISK>:\\Program Files\\Epic Games\\Fortnite\\FortniteGame\\Content\\Paks",
         "locales" : ["de","en","fr","ru","es","pt-BR","tr","it"],
-        "dumpIcons" : false
+        "dumpIcons" : false,
+        "mode" : "memory"
     },
     "builddumping": {
         "fnlogs": "<DISK>:\\Users\\<USER>\\AppData\\Local\\FortniteGame\\Saved\\Logs\\FortniteGame.log",
